# SRAexplore

./: .bandit  .gitignore  LICENSE  README.md  pyproject.toml
SRAexplore/: app.py  data_simple_stats.py  fetch.py  plots.py  utils.py
tests/: test_fetch.py
