[tool.poetry]
name = "sraexplore"
version = "0.1.0"
description = "This package aims at fetching with some filtering criteria and analyzing sequencing metadata from the Sequence Read Archive (SRA) database and explore the available studies. It will generate some statistics of interest and vizualisations."
authors = ["cschneuw <christelle.schneuwly.diaz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pysradb = "^1.4.2"
streamlit = "^1.17.0"
pandas = "^1.5.3"
plotly = "^5.12.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
bandit = "^1.7.4"
flake8 = "^6.0.0"
coverage = "^7.0.5"
pre-commit = "^2.21.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
